[tool.poetry]
name = "jj"
version = "0.1.0"
description = ""
authors = ["jj"]
readme = "README.md"

package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = {extras = ["standard"], version = "^0.32.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
